--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 
 <body>
     <div class="container">
+
+        <!-- header -->
         <header>
+            <img src="image/burger-menu.svg" alt="" class="menu">
             <div class="logo_div">
                 <img src="image/header-logo.svg" alt="">
                 <h2 class="header_h">Travel Day.com</h2>
@@ -41,9 +44,28 @@
                 <i class="fa-solid fa-circle-user"></i>
             </div>
         </header>
+
+        <!-- section1 -->
+        <section class="section1">
+
+
+
+
+
+
+
+
+
+
+        </section>
+
+        <!-- section2 -->
         <section></section>
+
+        <!-- section3 -->
         <section></section>
-        <section></section>
+
+        <!-- footer -->
         <footer></footer>
     </div>
 
