--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/laptops.css">
     <link rel="stylesheet" href="css/tablet.css">
     <link rel="stylesheet" href="css/mobile.css">
+    <link rel="stylesheet" href="css/stylesheet.css">
 </head>
 
 <body>
@@ -53,7 +54,10 @@
 
             <article class="section1_article">
                 <h2 class="section1_h">TRAVEL NEWS</h2>
-                <p class="section1_p">Lorem ipsum dolor sit amet consectetur. Lectus diam turpis condimentum convallis in. Ac lorem cras laoreet proin suscipit tempor nibh fermentum. Quisque varius sit elit placerat nulla ullamcorper eget. Lobortis semper nec augue sed aliquam. In eget mattis dui arcu mauris blandit. Elementum neque magna vestibulum amet sagittis vel.</p>
+                <p class="section1_p">Lorem ipsum dolor sit amet consectetur. Lectus diam turpis condimentum convallis
+                    in. Ac lorem cras laoreet proin suscipit tempor nibh fermentum. Quisque varius sit elit placerat
+                    nulla ullamcorper eget. Lobortis semper nec augue sed aliquam. In eget mattis dui arcu mauris
+                    blandit. Elementum neque magna vestibulum amet sagittis vel.</p>
             </article>
 
 
@@ -61,7 +65,56 @@
         </section>
 
         <!-- section2 -->
-        <section></section>
+        <section class="section2">
+
+            <h2 class="section2_h">DISCOVERY</h2>
+
+            <div class="section2_div">
+                <article class="section2article">
+                    <img src="image/discovery1.png" alt="" class="section2_img">
+                    <h2 class="section2_article_h">Lorem ipsum dolor</h2>
+                    <p class="section2_p">sit amet consectetur. Lectus diam turpis  condimentum convallis in. Ac
+                        lorem  cras laoreet proin
+                        suscipit tempor nibh fermentum.</p>
+
+                    <div class="article_div">
+                        <img src="image/clock.svg" alt="">
+                        <p class="time">2 day ago</p>
+                    </div>
+
+                </article>
+
+                <article class="section2article passport">
+                    <img src="image/discovery2.png" alt="" class="section2_img">
+                    <h2 class="section2_article_h">Lorem ipsum dolor</h2>
+                    <p class="section2_p">sit amet consectetur. Lectus diam turpis condimentum convallis in. Ac
+                        lorem cras laoreet proin
+                        suscipit tempor nibh fermentum.</p>
+
+                    <div class="article_div">
+                        <img src="image/clock.svg" alt="">
+                        <p class="time">2 day ago</p>
+                    </div>
+
+
+                </article>
+
+                <article class="section2article">
+                    <img src="image/discovery3.png" alt="" class="section2_img">
+                    <h2 class="section2_article_h">Lorem ipsum dolor</h2>
+                    <p class="section2_p">sit amet consectetur. Lectus diam turpis  condimentum convallis in. Ac
+                        lorem  cras laoreet proin suscipit tempor nibh fermentum.</p>
+                    <div class="article_div">
+
+                        <img src="image/clock.svg" alt="">
+                        <p class="time">2 day ago</p>
+                    </div>
+
+
+                </article>
+            </div>
+
+        </section>
 
         <!-- section3 -->
         <section></section>
