--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                 <article class="section2article">
                     <img src="image/discovery1.png" alt="" class="section2_img">
                     <h2 class="section2_article_h">Lorem ipsum dolor</h2>
-                    <p class="section2_p">sit amet consectetur. Lectus diam turpis  condimentum convallis in. Ac
-                        lorem  cras laoreet proin
+                    <p class="section2_p">sit amet consectetur. Lectus diam turpis condimentum convallis in. Ac
+                        lorem cras laoreet proin
                         suscipit tempor nibh fermentum.</p>
 
                     <div class="article_div">
@@ -102,8 +102,8 @@
                 <article class="section2article">
                     <img src="image/discovery3.png" alt="" class="section2_img">
                     <h2 class="section2_article_h">Lorem ipsum dolor</h2>
-                    <p class="section2_p">sit amet consectetur. Lectus diam turpis  condimentum convallis in. Ac
-                        lorem  cras laoreet proin suscipit tempor nibh fermentum.</p>
+                    <p class="section2_p">sit amet consectetur. Lectus diam turpis condimentum convallis in. Ac
+                        lorem cras laoreet proin suscipit tempor nibh fermentum.</p>
                     <div class="article_div">
 
                         <img src="image/clock.svg" alt="">
@@ -117,7 +117,43 @@
         </section>
 
         <!-- section3 -->
-        <section></section>
+        <section class="section3">
+
+            <h2 class="section3_h">PHOTOGRAPH</h2>
+
+
+            <div class="section3_main">
+
+
+
+                <div class="sectore3_articlediv">
+
+                    <img src="image/photograph1.png" alt="">
+                </div>
+
+                <article class="sector3_article">
+                    
+                    <h2 class="section3article_h">HAPPENING NOW.</h2>
+                    <p class="sectioin3_p">Lorem ipsum dolor sit amet consectetur. Lectus diam turpis condimentum
+                        convallis in. Ac lorem <br>cras laoreet proin suscipit tempor nibh fermentum ipsum dolor sit
+                        amet
+                        consectetur. Lectus diam <br> turpis condimentum convallis in. Ac lorem cras laoreet proin
+                        suscipit
+                        tempor nibh fermentum.</p>
+                </article>
+
+
+
+
+                <div class="section3_div">
+                    <img src="image/photograph2.png" alt="" class="section3_img">
+                    <img src="image/photograph3.png" alt="" class="section3_img">
+
+                </div>
+            </div>
+
+
+        </section>
 
         <!-- footer -->
         <footer></footer>
