--- a/index.html
+++ b/index.html
@@ -156,7 +156,11 @@
         </section>
 
         <!-- footer -->
-        <footer></footer>
+        <footer>
+
+            <img src="image/ic_baseline-mode-of-travel.svg" alt="">
+            <h2 class="footer_h">Travel Day.com</h2>
+        </footer>
     </div>
 
 
